--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -3,8 +3,9 @@
 {% assign current_locale = localization.language.iso_code | append: ',' %}
 <html {% if locale_rtl contains current_locale %}dir="rtl"{% endif %} class="no-js" lang="{{ request.locale.iso_code }}">
 <head>
-<!--VEDA_ROCKET_LOADER--><script src="{{ 'veda-rocket-loader.js' | asset_url }}" defer></script><!--END_VEDA_ROCKET_LOADER-->
-
+	<!--VEDA_ROCKET_LOADER-->
+	<script src="{{ 'veda-rocket-loader.js' | asset_url }}" defer></script><!--END_VEDA_ROCKET_LOADER-->
+	
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -41,27 +42,25 @@
 		}
 	</script>
 	{%- render 'veda-header-scripts' -%}
-<!--VEDA_NO_PLACEMENT_ADDON_POSITION-->
-{% render 'veda-no-placement-addons' %}
 </head>
 
 <body class="gradient">
-  <div id="veda-root" style="opacity: 0;" style="opacity: 1">
-    <a class="skip-to-content-link button visually-hidden" href="#MainContent">
-      {{ "veda.accessibility.skip_to_text" | t }}
-    </a>
-    
-    <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
-      {{ content_for_layout }}
-    </main>
+	<div id="veda-root" style="overflow: hidden; overflow: clip; display: flow-root; opacity: 0">
+	<a class="skip-to-content-link button visually-hidden" href="#MainContent">
+		{{ "veda.accessibility.skip_to_text" | t }}
+	</a>
+	
+	<main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
+		{{ content_for_layout }}
+	</main>
 	
 	
-    <ul hidden>
-      <li id="a11y-refresh-page-message">{{ 'veda.accessibility.refresh_page' | t }}</li>
-      <li id="a11y-new-window-message">{{ 'veda.accessibility.link_messages.new_window' | t }}</li>
-    </ul>
+	<ul hidden>
+		<li id="a11y-refresh-page-message">{{ 'veda.accessibility.refresh_page' | t }}</li>
+		<li id="a11y-new-window-message">{{ 'veda.accessibility.link_messages.new_window' | t }}</li>
+	</ul>
 	
-	  <script>
+	<script>
 		window.shopUrl = '{{ request.origin }}';
 		window.routes = {
 			cart_add_url: '{{ routes.cart_add_url }}',
@@ -90,13 +89,17 @@
 			playSlideshow: `{{ 'veda.sections.slideshow.play_slideshow' | t }}`,
 		}
 	</script>
-    
-<!--VEDA_FOOTER_THEME_POSITION-->
-{%sections 'veda-theme-footer' %}
-<!--VEDA_FOOTER_SCRIPTS_POSITION-->
-{%- render 'veda-footer-scripts' -%}
-<!--BEFORE_CLOSE_VEDA_ROOT-->
-  </div>
+	
+	<!--VEDA_FOOTER_THEME_POSITION-->
+	{% sections 'veda-theme-footer' %}
+	<!--VEDA_FOOTER_SCRIPTS_POSITION-->
+	{%- render 'veda-footer-scripts' -%}
+	
+	
+	<!--VEDA_NO_PLACEMENT_ADDON_POSITION-->
+	{% render 'veda-no-placement-addons' %}
+	<!--BEFORE_CLOSE_VEDA_ROOT-->
+</div>
 </body>
 
 </html>
